De-uglify bullets on some X servers.  Bug 91816, patch by Shaji <nvshaji@netscape.net>, r=pavlov, sr=shaver